--- a/mapa/templates/layout.html
+++ b/mapa/templates/layout.html
@@ -57,6 +57,7 @@
             <div class="dropdown-menu">
                 <a class="dropdown-item" href='{% url 'producao:bobinagens' %}'>Bobinagens</a></br>
                 <a class="dropdown-item" href='{% url 'producao:paletes' %}'>Paletes</a></br>  
+                <!-- <a class="dropdown-item" href='{% url 'producao:retrabalho_home' %}'>Retrabalho</a></br> -->
                                         
                 
             </div>
