--- a/mapa/producao/templates/retrabalho/retrabalho_form.html
+++ b/mapa/producao/templates/retrabalho/retrabalho_form.html
@@ -1,6 +1,6 @@
 {% load bootstrap3 %}
 
-<form method="POST" action="{% url 'producao:retrabalho_create' %}" onkeypress="return event.keyCode != 13;">
+<form method="POST" action="#" onkeypress="return event.keyCode != 13;">
    <!-- {% bootstrap_form form %} 
     {% bootstrap_field form.data %}
     {% bootstrap_field form.num_bobinagem %}
