--- a/mapa/producao/templates/retrabalho/retrabalho_home.html
+++ b/mapa/producao/templates/retrabalho/retrabalho_home.html
@@ -1,9 +1,9 @@
 {% extends "layout.html " %} 
-{% block title %}retrabalho | {{ block.super }}{% endblock %} 
+{% block title %}Retrabalho | {{ block.super }}{% endblock %} 
 {% block content %}
 <div class="container">
     <a href="{% url 'home' %}" class="btn btn-primary" role="button">Voltar</a>
-    <a  href="{% url 'producao:retrabalho_create' %}" class="btn btn-primary pull-right" role="button">Retrabalhar</a>
+    <a  href="#" class="btn btn-primary pull-right" role="button">Retrabalhar</a>
     
 
 </div>
