--- a/mapa/producao/templates/producao/bobine_list.html
+++ b/mapa/producao/templates/producao/bobine_list.html
@@ -159,8 +159,10 @@
                     <td id="estado_rejected">{{ item.estado }}</td>
                 {% elif item.estado == "LAB" %}
                     <td id="estado_lab">{{ item.estado }}</td>
-                {% else %}
+                {% elif item.estado == "BA" %}
                     <td id="estado_ba">{{ item.estado }}</td>
+                {% else %}
+                    <td id="estado_ind">{{ item.estado }}</td>
                 {% endif %}
                 {% if not item.con %}
                 <td></td>
