--- a/mapa/producao/templates/producao/bobinagem_update.html
+++ b/mapa/producao/templates/producao/bobinagem_update.html
@@ -7,7 +7,7 @@
 <div class="container">
 
     <div class="container">
-        <h1>Editar bobinagem: {{ object.nome }}</h1>
+        <h1 id="center">Editar bobinagem: {{ object.nome }}</h1><br>
         <form method="POST">
             {% csrf_token %}
             <div class="row">
