--- a/mapa/producao/templates/retrabalho/retrabalho_form.html
+++ b/mapa/producao/templates/retrabalho/retrabalho_form.html
@@ -1,14 +1,10 @@
 {% load bootstrap3 %}
-
+<div class="container size-table">
 <form method="POST" action="#" onkeypress="return event.keyCode != 13;">
-   <!-- {% bootstrap_form form %} 
-    {% bootstrap_field form.data %}
-    {% bootstrap_field form.num_bobinagem %}
-    {% bootstrap_field form.data %}
-    {% bootstrap_field form.data %} -->
     <div class="container">
-        <h1>Retrabalho</h1>
+        <h1 id="center">Retrabalho</h1>
     <div class="row">
+            <div class="col-md-2"></div>
             <div class="container col-sm-4">
                     {% bootstrap_field form.data %}
                     
@@ -16,76 +12,47 @@
         
             </div>
             <div class="container col-sm-4">
-                    {% bootstrap_field form.inico %}
-                    
-                    
+                {% bootstrap_field form.num_bobinagem %}
+                
+                
+    
+        </div>
+        <div class="col-md-2"></div>
         
-            </div>
-            <div class="container col-sm-4">
-                    {% bootstrap_field form.fim %}
-                    
-                    
-        
-            </div>
     </div>
     <div class="row">
-            <div class="container col-sm-4">
-                    {% bootstrap_field form.num_bobinagem %}
-                    
-                    
-        
-            </div>
-            <div class="container col-sm-4">
-                    {% bootstrap_field form.perfil %}
-                    
-                    
-        
-            </div>
+                <div class="col-md-2"></div>
+        <div class="container col-sm-4">
+                {% bootstrap_field form.perfil %}
+                
+                
+    
+        </div>
+            
+            
             <div class="container col-sm-4">
                     {% bootstrap_field form.estado %}
                     
                     
         
             </div>
+            <div class="col-md-2"></div>
     </div>
-    <div class="row">
-            <div class="container col-sm-4">
-                    {% bootstrap_field form.diam %}
-                    
-                    
-        
-            </div>
-            <div class="container col-sm-4">
-                    
-                    {% bootstrap_field form.comp %}
-                    
-        
-            </div>
-            
-    </div>
-    <div class="row">
-            <div class="container col-sm-4">
-                    {% bootstrap_field form.num_emendas %}
-                    
-                    
-        
-            </div>
-           
-        
-            
-    </div>
-    
-   
-    </br>
-    <div class="row">    
+      
+    <br>
+    <div class="row">  
+        <div class="col-md-2"></div>  
+        <div class="col-md-8">
             {% csrf_token %}
-            <a href="{% url 'producao:bobinagens' %}" class="btn btn-primary pull-left" role="button">Voltar</a>
-            <input type="submit" class="btn btn-primary pull-right" value="Submeter">
+            <a href="{% url 'producao:retrabalho_home' %}" class="btn btn-primary pull-left" role="button">Voltar</a>
+            <input type="submit" class="btn btn-primary pull-right" value="Criar">
         </div>
+        <div class="col-md-2"></div>
+</div>
     
 </div>
 
     
 </form>
-
+</div>
 
