--- a/mapa/assets/css/mapa.css
+++ b/mapa/assets/css/mapa.css
@@ -21,13 +21,23 @@
     text-align: center;
 }
 
+/* td {
+    text-align: center;
+}
+
+th 
+    text-align: center;
+} */
+
 
 #estado_good {
     background-color: green;
     color: white;
     text-align: center;
+   
     
 }
+
 
 #estado_rejected {
     background-color: red;
@@ -57,3 +67,44 @@
     color: yellow;
     text-align: center;
 }
+
+#estado_hold {
+    background-color: #b237cc;
+    color: white;
+    text-align: center;
+}
+
+.bobines {
+    height: 650px;
+}
+
+.size-table {
+    height: 950px;
+}
+
+#center{
+    text-align: center;
+}
+
+#right  {
+    float: right;
+}
+
+#error {
+    color: red;
+}
+
+#white {
+    color: white;
+}
+
+.btn-lg {
+    width: 250px;
+    height: 125px;
+    
+}
+
+.center-text {
+    text-align: center;
+}
+
