--- a/mapa/producao/templates/perfil/perfil_detail.html
+++ b/mapa/producao/templates/perfil/perfil_detail.html
@@ -3,17 +3,30 @@
 {% block content %}
 
 
-<div class="container">
+<div class="container size-table">
     <div class="container">
         <a href="{% url 'producao:perfil' %}" class="btn btn-primary" role="button">Voltar</a>
     </div>
     
     <div class="container">
-            <h1>{{ perfil.nome }}</h1>
+            <h1>Detalhes do perfil {{ perfil.nome }}</h1><br>
+       <table>
+           
+               <tr>
+                    <th>Nº de bonines:</th>
+                    <td id="right">{{ perfil.num_bobines }}</td>
+                </tr>
+               <tr>
+                    <th>Largura:</th>
+                    <td id="right">{{ perfil.largura_bobinagem }}</td>
+                </tr>
+               <tr>
+                    <th>Core:</th>
+                    <td id="right">{{ perfil.core }}</td>
+                </tr>
+           
+       </table>
        
-       <p>Nº de Bobines:{{ perfil.num_bobines }}</p>
-       <p>Largura: {{ perfil.largura_bobinagem }}</p>
-       <p>Core: {{ perfil.core }}</p>
       
        <!-- <p>Core: {{ perfil.gramagem }}</p>
        <p>Espessura: {{ perfil.espessura }}</p>
@@ -24,19 +37,21 @@
           
     </div>
     <div class="container">
-        <h3>Larguras</h3>
+        <br>
+        <h3 id="center">Larguras</h3>
+        <br>
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-12 table-responsive">
                 <table class="table">
                     <tr>
                         {% for lar in largura %}
-                            <th>{{ lar.num_bobine }}</th>
+                            <th id="center">{{ lar.num_bobine }}</th>
                         {% endfor%}
                     </tr>
                     <tr>
                         {% for lar in largura %}
                             {% if not lar.largura == None%}
-                            <td>{{ lar.largura }}</td>
+                            <td id="center">{{ lar.largura }}</td>
                             {% else %}
                             <td></td>
                             {% endif %}
@@ -44,7 +59,7 @@
                     </tr>
                     <tr>
                         {% for lar in largura %}
-                            <td><a type="submit" href="{% url 'producao:perfil_update_largura' lar.pk %}">Alterar</a></td>
+                            <td id="center"><a type="submit" href="{% url 'producao:perfil_update_largura' lar.pk %}" class="btn btn-primary">Alterar</a></td>
                         {% endfor%}
                     </tr>
 
