--- a/mapa/producao/templates/perfil/perfil_home.html
+++ b/mapa/producao/templates/perfil/perfil_home.html
@@ -4,22 +4,24 @@
 
 {% block title %}Perfil | {{ block.super }}{% endblock %}
 {% block content %}
-<div class="container">    
-    <a href="{% url 'home' %}" class="btn btn-primary">Voltar</a>
+<div class="container">  
+    <a href="{% url 'producao:planeamento_home' %}" class="btn btn-primary">Voltar</a>
     <a href="{% url 'producao:perfil_create' %}" class="btn btn-primary pull-right" role="button">Criar perfil</a>
 </div>
-<div class="container table-responsive">
+<div class="container table-responsive size-table">
+    
+    <h1 id="center">Perfis</h1></br>
     <div class="row">
         <div class="col-md-12">
             <table class="table">
                 <tr>
-                    <td>Nome</td>
-                    <td>Produto</td>
-                    <td>Nº de Bobines</td>
-                    <td>Largura total</td>
-                    <td>Core</td>
-                    <td>Retrabalho</td>
-                    <td></td>
+                    <th>Perfil</th>
+                    <th>Produto</th>
+                    <th id="center">Nº de Bobines</th>
+                    <th id="center">Largura total</th>
+                    <th id="center">Core</th>
+                    <th id="center">Retrabalho</th>
+                    <th></th>
                     <!-- <td>Gramagem</td>
                     <td>Espessura</td>
                     <td>Densidade MP</td>
@@ -30,10 +32,10 @@
                 <tr>
                     <td><a href='{{ obj.get_absolute_url }}'>{{ obj.nome }}</a></td>
                     <td>{{ obj.produto }}</td>
-                    <td>{{ obj.num_bobines }}</td>
+                    <td id="center">{{ obj.num_bobines }}</td>
                      
-                    <td>{{ obj.largura_bobinagem }}</td>
-                    <td>{{ obj.core }}</td>
+                    <td id="center">{{ obj.largura_bobinagem }}</td>
+                    <td id="center">{{ obj.core }}</td>
                     <!-- <td>{{ obj.gramagem }}</td>
                     <td>{{ obj.espessura }}</td>
                     <td>{{ obj.densidade_mp }}</td>
@@ -44,7 +46,7 @@
                     {% else %}
                     <td class="check"><span style="color:red"><i class="glyphicon glyphicon-remove"></i></span></td>
                     {% endif %}
-                    <td><a href="{% url 'producao:perfil_delete' pk=obj.pk %}" class="btn btn-primary">Apagar</a></td>
+                    <td id="center"><a href="{% url 'producao:perfil_delete' pk=obj.pk %}" class="btn btn-danger">Apagar</a></td>
                 </tr>
                 {% endfor %}
             </table>
