--- a/mapa/producao/templates/producao/bobine_update.html
+++ b/mapa/producao/templates/producao/bobine_update.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <div class="container">
-    
-    <div class="container">
+    <div class="col-md-3"></div>
+    <div class="container col-md-6">
     <h1>Bobine: {{ object.nome }}</h1>
     <form method="POST">
        {% csrf_token %} 
@@ -16,17 +16,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2 container">
+            <div class="col-md-6 container">
                 <h4>Cónico: {{ form.con }}</h4>
                 <h4>Descentrado: {{ form.descen }}</h4>
                 <h4>Presa: {{ form.presa }}</h4>
-                <h4>Estrela: {{ form.estrela }}</h4>
+                <h4>Diam. Insuficiente: {{ form.diam_insuf }}</h4>
+                <h4>Buracos: {{ form.buraco }}</h4>
             </div>
-            <div class="col-md-2 container">
+            <div class="col-md-6 container">
                 <h4>Furos: {{ form.furos }}</h4>
-                <h4>Espessura: {{ form.esp }}</h4>
+                <h4>Gramagem: {{ form.esp }}</h4>
                 <h4>Troca NW: {{ form.troca_nw }}</h4>
                 <h4>Outros: {{ form.outros }}</h4>
+                
             </div>
         </div>
         <div class="row">
@@ -35,7 +37,7 @@
                 <h4>{{ form.obs }}</h4>
            </div>
         </div>
-        <div class="row col-md-5">
+        <div class="row col-md-12">
             {% if object.palete.estado != "DM"%}
                 <a href="{% url 'producao:bobinestatus'  pk=object.bobinagem.pk %}" class="btn btn-primary pull-left" role="button">Voltar</a>
 
@@ -47,6 +49,7 @@
        
     </form>
 </div>
+<div class="col-md-3"></div>
 </div>
 
 {% endblock %}
