--- a/mapa/producao/templates/retrabalho/retrabalho_home.html
+++ b/mapa/producao/templates/retrabalho/retrabalho_home.html
@@ -2,53 +2,48 @@
 {% block title %}Retrabalho | {{ block.super }}{% endblock %} 
 {% block content %}
 <div class="container">
-    <a href="{% url 'home' %}" class="btn btn-primary" role="button">Voltar</a>
-    <a  href="#" class="btn btn-primary pull-right" role="button">Retrabalhar</a>
+    <a href="{% url 'producao:producao_home' %}" class="btn btn-primary" role="button">Voltar</a>
+    {% comment %} <a  href="#" class="btn btn-primary pull-right" role="button">Retrabalhar</a> {% endcomment %}
+    <a href="{% url 'producao:retrabalho_bobinagem' %}"" class="btn btn-primary pull-right" role="button">Retrabalhar</a>
+    
     
 
 </div>
-<div class="container table-responsive">
+<div class="container">
+        <h1 id="center">Bobinagens retrabalhadas</h1><br>
+{% comment %} <div class="container table-responsive col-sm-6">
 
-    <h2>Bobines para retrabalho</h2>
+    <h2>Paletes para retrabalho</h2>
     <table class="table fit">
             <tr>
-                <th>Bobine</th>
+                
                 <th>Palete</th>
-                <th>Estado</th>
-                <th>Largura</th>
-                <th>Comprimento (m)</th>
-                <th>Comprimento actual (m)</th>
-                <th>Área (m2)</th>
+                
                            
                 
             </tr>
-            {% for b in bobine %}
-            {% if b.palete.estado == 'DM' %}
+            {% for p in palete %}
+            {% if p.num != 0 %}
             <tr>
-                <td><a href="{% url 'producao:bobineupdate' b.pk %}">{{ b.nome }}</a></td>
-                <td>{{ b.palete }}</td>
-                <td>{{ b.estado}}</td>
-                <td>{{ b.largura.largura }}</td>
-                <td>{{ b.bobinagem.comp }}</td>
-                <td>{{ b.comp_actual }}</td>
-                <td>{{ b.area }}</td>
+                <td><a href="#"></a>{{ p.nome }}</a></td>
+               
             </tr>
             {% endif %}
             {% endfor %}
         </table>
-    
-
-        <h2>Bobinagens retrabalhadas</h2>
+    </div>    {% endcomment %}
+    <div class="container table-responsive">
+        
         <table class="table fit">
                 <tr>
                     <th>Bobinagem</th>
                     <th>Data</th>
                     <th>Estado</th>
-                    <th>Nº de Emendas</th>
-                    <th>Core</th>
-                    <th>Nº de Bobines</th>
-                    <th>Comprimento (m)</th>
-                    <th>Área (m2)</th>
+                    <th id="center">Nº de bobines originais</th>
+                    <th id="center">Core (")</th>
+                    <th id="center">Nº de Bobines</th>
+                    <th id="center">Comprimento (m)</th>
+                    <th id="center">Área (m2)</th>
                                
                     
                 </tr>
@@ -58,20 +53,24 @@
                     
                     <td><a href='{{ b.get_absolute_url }}'>{{ b.nome }}</a></td>
                     <td>{{ b.data|date:"d-n-Y"  }}</td>
-                    <td>{{ b.estado  }}</td>
-                    <td>{{ b.num_emendas  }}</td>
-                    <td>{{ b.perfil.core }}</td>
-                    <td>{{ b.perfil.num_bobines }}</td>
-                    <td>{{ b.comp_cli }}</td>
-                    <td>{{ b.area }}</td>
-                    
-                    <td><a href="{% url 'producao:bobinagem_delete' pk=b.pk %}" class="btn btn-primary">Apagar</a></td>     
+                    <td id="estado_good">{{ b.estado  }}</td>
+                    <td id="center">{{ b.num_emendas }}</td>
+                    <td id="center">{{ b.perfil.core }}</td>
+                    <td id="center">{{ b.perfil.num_bobines }}</td>
+                    <td id="center">{{ b.comp_cli }}</td>
+                    <td id="center">{{ b.area }}</td>
+                    <td id="center"><a href="{% url 'producao:retrabalho_filter' pk=b.pk %}" class="btn btn-primary">Editar</a></td>                         
+                    <td id="center"><a href="{% url 'producao:bobinagem_delete' pk=b.pk %}" class="btn btn-danger">Apagar</a></td>     
                 </tr>
                 {% endif %}
                 {% endfor %}
             </table>
+        </div> 
+        <div>
+            
+        </div> 
+    </div>
 
 
-</div>
 
 {% endblock %}
