--- a/mapa/templates/layout.html
+++ b/mapa/templates/layout.html
@@ -17,7 +17,7 @@
   <title>{% block title %}Mapa de Acompanhamento da Produção{% endblock %}</title>
 </head>
 
-<body class="size-table">
+<body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container" >
       <div class="navbar-header">
